--- a/weiyun-batchtask/manifest.json
+++ b/weiyun-batchtask/manifest.json
@@ -5,23 +5,24 @@
 	"description": "微云自动批量添加下载任务工具",
 	"icons":
 	{
-		"16": "icon-16.png",
-		"48": "icon-48.png",
-		"128": "icon-100.png"
+		"16": "image/icon-16.png",
+		"48": "image/icon-48.png",
+		"128": "image/icon-128.png"
 	},
 	"browser_action": 
 	{
-		"default_icon": "icon-16.png",
-		"default_title": "微云自动批量添加下载任务工具"
+		"default_icon": "image/icon-16.png",
+		"default_title": "微云自动批量添加下载任务工具",
+		"default_popup": "html/popup.html"
 	},
 	"content_scripts": 
 	[
 		{
 			"matches": ["https://www.weiyun.com/disk/*"],
-			"js": ["weiyun-batchtask.js"],
+			"js": ["js/weiyun-batchtask.js"],
 			"run_at": "document_start"
 		}
 	],
-	"web_accessible_resources": ["weiyun-batchtask.js"],
+	"web_accessible_resources": ["js/weiyun-batchtask.js"],
 	"homepage_url": "https://www.weiyun.com"
 }
